--- a/views/user_detail.ejs
+++ b/views/user_detail.ejs
@@ -3,6 +3,8 @@
 <%- include('_header') -%>
 <body>
 <h1><%= name %></h1>
+<p><%= username %></p>
+<p><%= email %></p>
 <img 
 src = "<%=  profileImageUrl %>" 
 alt = "Profile Image>" 
@@ -15,7 +17,7 @@ alt = "<%= name %>"
 height = "150" 
 width = "150" 
 />
-<p> Likes: <em><%= likes.length %></em> Dislikes: <em><%= dislikes.length %></em></p>  
+
  
 </body>
 <%- include('_footer') -%>
