--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9,34 +9,116 @@ h1 {
     font-weight: bolder;
     text-align: center;
 }
+.user-info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 80%;
+    padding :0;
+    margin: auto;
+    
+}
+.profile-image{
+    border-radius: 50%;
+    border: 2px solid white;
+    margin-top: 5em;
+    width: 100%;
+    height: 7em;
+    margin-left: 2em;
+    margin-top: -4em;
+  }
+
+
+.details-container {
+    position: absolute;
+    background-color: rgba(37,42,56,0.56);
+    border: 1px solid red;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: left;
+    padding-left: 5em;
+    width: 80%;
+    margin-top: -8.5%;
+    margin-left: 10%;
+}
+
+
+.profile-container {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    z-index: 1;
+}
+
+.username {
+    font-weight: bold;
+}
+
+.name {
+    font-size: 20px;
+    font-weight: lighter;
+}
+
+
+.cover-image{
+    width: 83%;
+    margin: 0 75vw;
+    height:100%;
+  
+
+    margin-top: 1em;
+
+}
+
+.user-images{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .post{
     /* background-color: #151820; */
 
-    background-color: #545f80; 
-    padding: 1em;
-    width: 100%;
+    background-color: #151820; 
+    width: 80%;
     margin-bottom: 1em;
     box-sizing: border-box;
-    /* margin-left: 1em; */
-
+    display:flex;
+    flex-direction: column;
+  
 }
 .post-list{
     display: flex;
     flex-wrap: wrap;
+    gap: 10px 10px;
     justify-content: space-between;
     list-style-type: none;
-    padding: 0;
+    padding :0;
+    margin: 15vw;
 }
 .post-posted-by{
-    font-style: italic;
-    color: #bdb2b2;
+    color: white;
+    padding: 0;
+    margin-bottom: 0;
+    padding-left: 0.6em;
+    font-size: small;
 }
+
+.post-date{
+    color: rgb(193, 197, 196);
+    font-size:x-small;
+    margin-top: 0;
+    padding-left: 1em;
+}
+.post-message{
+    padding-left: 0.6em;
+    font-weight: lighter;
+    font-size: small;
+}
+
 .post-image{
-    border-radius: 1em;
-    border: 1px solid #bdb2b2;
-    box-shadow: 20px 50px 50px rgba(0,0,0,0.19), 
-    10px 6px 6px rgba(0,0,0,0.23);
-  }
+    width: 100%;
+}
 span{
     font-weight: bold;
 }
@@ -54,6 +136,7 @@ a {
 a:hover {
     background-color:#bdb2b2;
     color: black;
+    cursor: pointer;
 }
 a:visited {
     background-color: #ddd;
@@ -69,9 +152,10 @@ a:visited {
     color: white;
 } */
 
+
 @media (min-width:300px) and (max-width:600px)  {
   .post{ 
-    width: calc(100% - 2em);
+    width: 80%;
   }  
     
 }
@@ -83,7 +167,7 @@ a:visited {
   }
   @media (min-width:900px) {
     .post{ 
-      width: calc((100% - 2em)/3);
+      width: calc((100% - 3.5em)/3);
     }  
       
   }
