Added mobile menu with JS

--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,6 +1,22 @@
 <header>
-    <nav>
-        <a href="/posts">Posts</a>
-        <a href="/users">Users</a>
+    <nav class = "nav-bar">
+       <a href="/users">MyFace</a> 
+       <a href="/posts">Home</a> 
+       <a href="/posts">Posts</a> 
+       <a href="/users">Users</a> 
+       <a href="/users">+NewPosts</a> 
+       <button id ="ham-btn" >&#9776;</button>  
+    
     </nav>
-</header>
+ 
+    <div id = "mobile-menu" class = "mobile-menu-hidden">
+        <button id ="cross-btn"  >&times;</button>  
+        <p class = "myFaceLogo" >MyFace</a>
+        <a class = "mobile-menu-element" href="/posts">Home</a>
+        <a class = "mobile-menu-element" href="/posts">Posts</a> 
+        <a class = "mobile-menu-element" href="/users">Users</a>
+        <a class = "mobile-menu-element" href="/users">+NewPosts</a>
+         
+    </div> 
+
+</header> 
