--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,173 +1,193 @@
 /* Add your styles here. */
-body{
-    background-color: #252A38;
+body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color:white;
-    margin: 3em;
+    background-color: #252a38;
+    color: #DCDCDC;
+    margin: 0;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+    font-weight: 400;
 }
-h1 {
-    font-weight: bolder;
-    text-align: center;
-}
-.user-info{
+
+.mobile-menu-hidden {
+    display:none;
+
+ }
+.nav-bar {
+    background-color: #151820;
+    box-sizing: border-box;
+    padding: 1rem 0;  
+    color: white;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: space-around;
     align-items: center;
-    width: 80%;
-    padding :0;
-    margin: auto;
+ }
+
+.nav-bar a:hover {
+    color: white;
+    background-color: #777777;
+}
+
+.nav-bar a:visited {
+    color: white;
     
 }
-.profile-image{
-    border-radius: 50%;
-    border: 2px solid white;
-    margin-top: 5em;
-    width: 100%;
-    height: 7em;
-    margin-left: 2em;
-    margin-top: -4em;
-  }
-
-
-.details-container {
-    position: absolute;
-    background-color: rgba(37,42,56,0.56);
-    border: 1px solid red;
+.nav-item{
+    margin-left: 4rem;
+}
+a{
+    text-decoration: none;
+    color: white;
+}
+.active.nav-bar{
+    display: block;
+}
+.menu{
+ 
+    text-decoration: none;
+    list-style-type: none;
     display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: left;
-    padding-left: 5em;
-    width: 80%;
-    margin-top: -8.5%;
-    margin-left: 10%;
+    flex-direction: row; 
+    justify-content:space-evenly;
+    align-items: center;  
 }
 
-
-.profile-container {
-    display: flex;
-    justify-content: center;
-    position: absolute;
-    z-index: 1;
+h1 {
+    font-weight: 400;
+    font-size: 1.5rem;
+    line-height: 2rem;
 }
 
-.username {
-    font-weight: bold;
+/* User stuff */
+
+.user-info {
+    background-color: #252a388f;
 }
 
-.name {
-    font-size: 20px;
-    font-weight: lighter;
+.user-info p, .user-info h1 {
+    margin: 0;
 }
 
-
-.cover-image{
-    width: 83%;
-    margin: 0 75vw;
-    height:100%;
-  
-
-    margin-top: 1em;
-
-}
-
-.user-images{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.post{
-    /* background-color: #151820; */
-
-    background-color: #151820; 
-    width: 80%;
-    margin-bottom: 1em;
+.user-header .user-profile-pic {
+    width: 7rem;
+    height: 7rem;
+    border: 0.25rem solid white;
+    border-radius: 3.5rem;
     box-sizing: border-box;
-    display:flex;
-    flex-direction: column;
-  
+    position: absolute;
+    top: calc(30vh - 3.5rem);
+    left: 1.5rem;
+    z-index: 102;
 }
-.post-list{
+
+.user-header .user-cover-photo {
+    width: 100vw;
+    height: 30vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 100;
+}
+
+.user-header .user-info {
+    height: 7rem;
+    width: calc(100vw - (1.5rem + 3.5rem));
+    padding-left: calc(3.5rem + 1rem);
+    position: absolute;
+    top: calc(30vh - 3.5rem);
+    left: calc(1.5rem + 3.5rem);
+    z-index: 101;
+}
+
+.user-info .user-username {
+    font-weight: 600;
+}
+
+.user-info .user-email {
+    font-weight: 300;
+}
+
+.first-after-user-header {
+    margin-top: calc(30vh + 3.5rem + 2.5rem);
+}
+
+/* Post stuff */
+
+.post-list {
+    list-style-type: none;
+    padding: 0;
     display: flex;
     flex-wrap: wrap;
-    gap: 10px 10px;
     justify-content: space-between;
-    list-style-type: none;
-    padding :0;
-    margin: 15vw;
-}
-.post-posted-by{
-    color: white;
-    padding: 0;
-    margin-bottom: 0;
-    padding-left: 0.6em;
-    font-size: small;
 }
 
-.post-date{
-    color: rgb(193, 197, 196);
-    font-size:x-small;
-    margin-top: 0;
-    padding-left: 1em;
-}
-.post-message{
-    padding-left: 0.6em;
-    font-weight: lighter;
-    font-size: small;
-}
-
-.post-image{
+.post {
+    background-color: #151820;
+    padding: 1em;
+    margin-bottom: 1em;
     width: 100%;
+    box-sizing: border-box;
 }
-span{
-    font-weight: bold;
+/* Mobile Menu CSS*/
+.mobile-menu-hidden{
+    display: none;
 }
-.direction{
-    font-style: italic;
+.mobile-menu-open{
+    display: flex;
+    flex-direction: column;
+    justify-content:center; 
+    align-items:center;
+    position: fixed;
+    width: 50vw; 
+    height: 100vh;
+    background-color: #151820;
+    top: 0;
+    right: 0;
+    box-sizing: border-box;
 }
-a {
-    text-decoration: none;
-    display: inline-block;
-    padding: 8px 16px;
-    color: rgb(243, 239, 239);
-    background-color: #f1f1f1;
-}
-
-a:hover {
-    background-color:#bdb2b2;
-    color: black;
+#ham-btn{
+    font-size: 1.5rem;
+    background-color: #151820;
+    color: white;
+    border: none;
     cursor: pointer;
-}
-a:visited {
-    background-color: #ddd;
+
+} 
+#cross-btn{
+    margin-left: 50px;
+    font-size: 2rem;
+    top: 0;
+    right: 0;
+    background-color: #151820;
     color: white;
-}
-/* .previous {
-    background-color: #f1f1f1;
-    color: black;
+    border: none;
+    cursor: pointer;
+} 
+.mobile-menu-element {
+    padding: 2em;
+} 
+
+@media (min-width: 600px) and (max-width: 900px) {
+    .post {
+        width: calc((100% - 1em) / 2);
+    }
+    .nav-bar { 
+        display: none;
+      } 
 }
 
-.next {
-    background-color:#bdb2b2;
-    color: white;
-} */
+@media (min-width: 900px) {
+    .post {
+        width: calc((100% - 3em) / 4);
+    }
 
-
-@media (min-width:300px) and (max-width:600px)  {
-  .post{ 
-    width: 80%;
-  }  
-    
+    .post:first-child {
+        width: calc((100% - 1em) / 2);
+    }
 }
-@media (min-width:600px) and (max-width:900px)  {
-    .post{ 
-      width: calc((100% - 1em)/2);
-    }  
-      
-  }
-  @media (min-width:900px) {
-    .post{ 
-      width: calc((100% - 3.5em)/3);
-    }  
-      
-  }
+
+.post .post-posted-by {
+    font-style: italic;
+    color: #cccccc;
+}
