--- a/views/post_list.ejs
+++ b/views/post_list.ejs
@@ -1,25 +1,28 @@
+
 <html lang="en-gb">
-<%- include('_head') -%>
-<%- include('_header') -%>
-<body>
-<h1>POSTS</h1>
-<ol class = "post-list">
-    <% results.forEach(function(post) {%>
-        <li class = "post">
-            <img class = "post-image" src=<%= post.imageUrl %> alt = "Post Image" height = "150" width = "150" />
-            <!-- <p>Id: <%= post.id %></p>  -->
-            <p class = "post-message"><%= post.message %></p> 
-            <p class = "post-posted-by">Posted by <%= post.postedBy.name %> on <%= post.createdAt %></p> 
-            <p class = "post-posted-by"><span>Likes: </span><%= post.likedBy.length %><span> Dislikes: </span><%= post.dislikedBy.length %></p> 
-        </li>
-    <% }); %>
-</ol>
-    <%if (previous) { %>
-    <a class = "previous" href="<%= previous %>">Previous</a>
-    <% } %>
+    <%- include('_head') -%>
+    <%- include('_header') -%>
+    <body>
+   
+          
+    <h1>POSTS</h1>
+ 
+    <button id = "my-button" type="button">Change Post Background</button>
+    <ol class="post-list">
+        <% results.forEach(function(post) {%>
+            <li class="post">
+                <img class="post-image" src="<%= post.imageUrl %>" alt="<%= post.message %>" width="50" height="50" />
+                <p class="post-message"><%= post.message %></p>
+                <p class="post-posted-by">Posted by <a href="/users/<%= post.postedBy.id %>"><%= post.postedBy.name %></a></p>
+            </li>
+        <% }); %>
+    </ol>
     <%if (next) { %>
-    <a class = "next" href="<%= next %>">Next</a>
+        <a href="<%= next %>">Next</a>
     <% } %>
-</body>
-<%- include('_footer') -%>
-</html>
+    <%if (previous) { %>
+        <a href="<%= previous %>">Previous</a>
+    <% } %>
+    </body>
+    <%- include('_footer') -%>
+    </html>
